Add i18n routing and locale widget to the navbar

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,5 +1,6 @@
-<h1>Welcome</h1>
+<h1><%= t(:'blacklight.welcome') %></h1>
 
-This is the demo site for <a href="https://github.com/projectblacklight/blacklight">Blacklight</a>. It is simply the result of running the Blacklight <a href="https://github.com/projectblacklight/blacklight/wiki/Quickstart">Quickstart</a> guide.
+<p>This is the demo site for <a href="https://github.com/projectblacklight/blacklight">Blacklight</a>. It is simply the result of running the Blacklight <a href="https://github.com/projectblacklight/blacklight/wiki/Quickstart">Quickstart</a> guide.</p>
 
-Blacklight <%= Blacklight::VERSION %>
+<p>Blacklight <%= Blacklight::VERSION %></p>
+
