Bootstrap alpha6 reverted tags back to being badges

--- a/app/assets/stylesheets/blacklight.scss
+++ b/app/assets/stylesheets/blacklight.scss
@@ -6,5 +6,5 @@ $padding-xs-horizontal: 1ch !default;
 @import 'blacklight_marc';
 
 #marc_view .tag {
-  @extend .tag-default;
+  @extend .badge-default;
 }
