--- a/app/assets/stylesheets/blacklight.scss
+++ b/app/assets/stylesheets/blacklight.scss
@@ -2,7 +2,10 @@
 
 @import 'blacklight/blacklight';
 $padding-xs-horizontal: 1ch !default;
-
+$nav-link-padding: $nav-link-padding-y $nav-link-padding-x;
+.badge-default {
+  @extend .badge-secondary;
+}
 @import 'blacklight_marc';
 
 #marc_view .tag {
